--- a/clock.html
+++ b/clock.html
@@ -2,10 +2,12 @@
 <html lang="fr">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="internet_clock.css">
+    <link rel="stylesheet" href="style.css">
     <title>Cuckoo clock</title>
 </head>
 <body>
-    <div class="clock"></div>
+    <div class="clock">
+        <div class="clock_container"></div>
+    </div>
 </body>
 </html>
