--- a/clock.html
+++ b/clock.html
@@ -6,8 +6,10 @@
     <title>Cuckoo clock</title>
 </head>
 <body>
-    <div class="clock">
-        <div class="clock_container"></div>
+    <div class="forme">
+        <div class="clock">
+            <div class="clock_container"></div>
+        </div>
     </div>
 </body>
 </html>
