forme de l'horloge

--- a/clock.html
+++ b/clock.html
@@ -6,7 +6,9 @@
     <title>Cuckoo clock</title>
 </head>
 <body>
-    <div class="forme">
+    <div class="roof"></div>
+    <div class="triangle"></div>
+    <div class="carre">
         <div class="clock">
             <div class="clock_container"></div>
         </div>
