--- a/clock.html
+++ b/clock.html
@@ -2,12 +2,16 @@
 <html lang="fr">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="internet_clock.css">
     <title>Cuckoo clock</title>
 </head>
 <body>
     <div class="clock">
         <div class="clock_container"></div>
+        <div class="door_background">
+            <div class="door_left"></div>
+            <div class="door_right"></div>
+        </div>
     </div>
 </body>
 </html>
