--- a/clock.html
+++ b/clock.html
@@ -7,14 +7,15 @@
 </head>
 <body>
     <div class="roof"></div>
-    <div class="triangle"></div>
-    <div class="carre">
-    <div class="clock">
-        <div class="clock_container"></div>
+    <div class="triangle">
         <div class="door_background">
             <div class="door_left"></div>
             <div class="door_right"></div>
         </div>
+    </div>
+    <div class="carre"> </div>
+    <div class="clock">
+        <div class="clock_container"></div>
     </div>
     <div class="weights"></div>
 </body>
