--- a/clock.html
+++ b/clock.html
@@ -6,11 +6,16 @@
     <title>Cuckoo clock</title>
 </head>
 <body>
-    <div class="forme">
+    <div class="form">
         <div class="clock">
             <div class="clock_container"></div>
+            <div class="wire1">
+                <div class="weight1"></div>
+            </div>
+            <div class="wire2">
+                <div class="weight2"></div>
+            </div>
         </div>
     </div>
-    <div class="weights"></div>
 </body>
 </html>
