--- a/clock.html
+++ b/clock.html
@@ -9,6 +9,9 @@
     <div class="roof"></div>
     <div class="triangle">
         <div class="door_background">
+            <div >
+                <img class="bird" src="bird.png" alt="coucou oiseau" >
+            </div>
             <div class="door_left"></div>
             <div class="door_right"></div>
         </div>
