1 first sound / tiret

--- a/clock.html
+++ b/clock.html
@@ -6,6 +6,7 @@
     <title>Cuckoo clock</title>
 </head>
 <body>
+    <script src="script.js"></script>
     <div class="horloge">
         <div class="roof">
             <div class="triangle">
@@ -22,6 +23,7 @@
         <div class="form">
             <div class="clock">
                 <div class="clock_container"></div>
+                <div class="tiret_horizontal"></div>
             </div>
         </div>
         <div class="poids">
