--- a/clock.html
+++ b/clock.html
@@ -9,31 +9,31 @@
     <script src="script.js"></script>
     <div class="horloge">
         <div class="roof">
-            <div class="triangle">
+            <div class="roof_coffer">
                 <div class="door_background">
                     <div >
                         <img class="bird" src="bird.png" alt="coucou oiseau" >
-                        <img id="coucou" src="bird2.png" alt="oiseau avance" >
+                        <img class="wing_bird" src="bird2.png" alt="oiseau avance" >
                     </div>
                     <div class="door_left"></div>
                     <div class="door_right"></div>
                 </div>
             </div>
         </div>
-        <div class="form">
-            <div class="clock">
-                <div class="clock_container"></div>
-                <div class="tiret_horizontal"></div>
+        <div class="coffer">
+            <div class="dial">
+                <div class="dial_container"></div>
+                <div class="decorating_dial"></div>
             </div>
         </div>
-        <div class="poids">
-            <div class="pendule">
-                <div class="wire1"></div>
-                <div class="weight1"></div>
+        <div class="weights">
+            <div class="pendulum">
+                <div class="wire_left"></div>
+                <div class="weight_left"></div>
             </div>
-            <div class="pendule">
-                <div class="wire2"></div>
-                <div class="weight2"></div>
+            <div class="pendulum">
+                <div class="wire_right"></div>
+                <div class="weight_right"></div>
             </div>
         </div>
     </div>
