--- a/clock.html
+++ b/clock.html
@@ -12,8 +12,8 @@
             <div class="roof_coffer">
                 <div class="door_background">
                     <div >
-                        <img class="bird" src="bird.png" alt="coucou oiseau" >
-                        <img class="wing_bird" src="bird2.png" alt="oiseau avance" >
+                        <img class="bird" src="bird.png" alt="Cuckoo bird" >
+                        <img class="wing_bird" src="bird2.png" alt="Cuckoo bird with wings" >
                     </div>
                     <div class="door_left"></div>
                     <div class="door_right"></div>
