--- a/clock.html
+++ b/clock.html
@@ -7,33 +7,33 @@
 </head>
 <body>
     <script src="script.js"></script>
-    <div class="horloge">
-        <div class="roof">
-            <div class="roof_coffer">
-                <div class="door_background">
+    <div id="horloge">
+        <div id="roof">
+            <div id="roof_coffer">
+                <div id="door_background">
                     <div >
-                        <img class="bird" src="bird.png" alt="Cuckoo bird" >
-                        <img class="wing_bird" src="bird2.png" alt="Cuckoo bird with wings" >
+                        <img id="bird" src="bird.png" alt="Cuckoo bird" >
+                        <img id="wing_bird" src="bird2.png" alt="Cuckoo bird with wings" >
                     </div>
-                    <div class="door_left"></div>
-                    <div class="door_right"></div>
+                    <div id="door_left"></div>
+                    <div id="door_right"></div>
                 </div>
             </div>
         </div>
-        <div class="coffer">
-            <div class="dial">
-                <div class="dial_container"></div>
-                <div class="decorating_dial"></div>
+        <div id="coffer">
+            <div id="dial">
+                <div id="dial_container"></div>
+                <div id="decorating_dial"></div>
             </div>
         </div>
-        <div class="weights">
+        <div id="weights">
             <div class="pendulum">
-                <div class="wire_left"></div>
-                <div class="weight_left"></div>
+                <div id="wire_left"></div>
+                <div id="weight_left"></div>
             </div>
             <div class="pendulum">
-                <div class="wire_right"></div>
-                <div class="weight_right"></div>
+                <div id="wire_right"></div>
+                <div id="weight_right"></div>
             </div>
         </div>
     </div>
