--- a/clock.html
+++ b/clock.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <script src="script.js"></script>
-    <div id="horloge">
+    <div id="clock">
         <div id="roof">
             <div id="roof_coffer">
                 <div id="door_background">
